# sesparser

./: .gitignore  .readthedocs.yaml  NOTICE  README.md  conf.py  index.rst  myscript.py  pyproject.toml
.github/: CODEOWNERS  release_helper.py
.github/workflows/: python-publish.yml
docs/: api.rst  conf.py  index.rst  modules.rst  requirements.txt  sesparser.rst
docs/source/: conf.py
src/sesparser/: __init__.py  __version__.py  attachments.py  body.py  headers.py  main.py  parse_it.py  store_aws.py
